- fix initial loading

--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -232,7 +232,7 @@
         #licenseCheckbox
         (change)="inputChange('license', $event.target)"
         [title]="'Add License'"
-        [value]="(license$ | async) !== null"
+        [value]="(license$ | async)?.type !== undefined"
     ></app-form-checkbox>
 
     <app-form-radio
@@ -268,8 +268,11 @@
     ></app-form-checkbox>
 
 </div>
-<button (click)="generate()"
-        class="text-white gap-2 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
+<button
+        (click)="generate()"
+
+        [disabled]="(title$ | async) === ''"
+        class="text-white gap-2 disabled:bg-slate-300 bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center inline-flex items-center me-2 dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800"
         type="button">
     <svg aria-hidden="true" class="w-5 h-5" fill="none" height="24" viewBox="0 0 24 24"
          width="24">
