- added repo link

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,24 @@
 <app-background></app-background>
 <app-header></app-header>
-<div class="absolute w-full flex gap-12 justify-center flex-col lg:flex-row items-center lg:items-start">
-    <main [ngClass]="{'max-w-96': generatedMarkdown$ | async}" class="block w-full max-w-[700px]">
-        <app-form
-                (generateMarkdown)="GenerateMarkdown()"
-        ></app-form>
-    </main>
-    <aside *ngIf="(generatedMarkdown$ | async) as markdown"
-           class="max-h-full w-full max-w-[800px] top-9 block lg:sticky  overflow-hidden">
-        <app-md-code-snippet
-                (updateFileGenerated)="GenerateMarkdown()"
-                [text]="markdown"
-        ></app-md-code-snippet>
-    </aside>
+<div class="flex relative">
+    <div class=" w-full flex gap-12 justify-center flex-col lg:flex-row items-center lg:items-start">
+        <main [ngClass]="{'max-w-96': generatedMarkdown$ | async}" class="block w-full max-w-[700px]">
+            <app-form
+                    (generateMarkdown)="GenerateMarkdown()"
+            ></app-form>
+        </main>
+        <aside *ngIf="(generatedMarkdown$ | async) as markdown"
+               class="max-h-full w-full max-w-[800px] top-9 block lg:sticky  overflow-hidden">
+            <app-md-code-snippet
+                    (updateFileGenerated)="GenerateMarkdown()"
+                    [text]="markdown"
+            ></app-md-code-snippet>
+        </aside>
+    </div>
+    <app-footer class="absolute bottom-0 isolate w-full "></app-footer>
 </div>
+
+<app-repo class=" fixed top-0 right-0 "></app-repo>
 
 <app-toast *ngFor="let toast of toastService.toasts | async" [toast]="toast"></app-toast>
 
