--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -2,4 +2,16 @@
     <img [src]="'../assets/images/icon.png'" class="h-24 drop-shadow-2xl"/>
     <h2 class="font-agrandir mt-4 text-slate-800">Document My Project</h2>
     <p class="font-writter mt-4 text-slate-500">Easily create markdown documentation for your project</p>
+    <button (click)="LoadData()"
+            class="mt-2 text-gray-900 bg-white hover:bg-gray-100 border border-gray-200 focus:ring-4 focus:outline-none focus:ring-gray-100 font-medium rounded-lg text-xs px-2 py-1 text-center inline-flex items-center dark:focus:ring-gray-600 dark:bg-gray-800 dark:border-gray-700 dark:text-white dark:hover:bg-gray-700 me-2 mb-2"
+            type="button">
+        <svg aria-hidden="true" class="w-5 h-5 text-gray-800 dark:text-white mr-1.5" fill="none"
+             height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M12 21a9 9 0 1 1 0-18c1.052 0 2.062.18 3 .512M7 9.577l3.923 3.923 8.5-8.5M17 14v6m-3-3h6"
+                  stroke="currentColor" stroke-linecap="round" stroke-linejoin="round"
+                  stroke-width="2"/>
+        </svg>
+
+        Load sample data
+    </button>
 </header>
