--- a/src/app/components/form/form.component.html
+++ b/src/app/components/form/form.component.html
@@ -1,4 +1,4 @@
-<div class="overflow-auto p-4">
+<div class="overflow-auto px-4 pb-4">
     <app-section-title [iconType]="'info'" [title]="'About'"></app-section-title>
     <small>Information about your project</small>
 
@@ -220,8 +220,17 @@
         <h6>Github</h6>
         <app-form-field
                 (change)="inputChange('author-github', $event.target)"
-                [placeholder]="'Author Username'"
+                [placeholder]="'Author Github username'"
                 [value]="githubUsername$ | async"
+        ></app-form-field>
+    </div>
+
+    <div class="flex flex-col">
+        <h6>LinkedIn</h6>
+        <app-form-field
+                (change)="inputChange('author-linkedin', $event.target)"
+                [placeholder]="'Author LinkedIn username'"
+                [value]="linkedinUsername$ | async"
         ></app-form-field>
     </div>
 
