- updated documentation - added devhunt banner

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,7 @@
 <app-background></app-background>
+<a href="https://devhunt.org/tool/document-my-project" title="Go to DevHunt">
+    <img [src]="'../assets/images/devhunt_badge.png'" class="h-24 drop-shadow-2xl p-5"/>
+</a>
 <app-header (loadData)="LoadSample()"></app-header>
 <div class="flex relative">
     <div class=" w-full flex gap-12 justify-center flex-col lg:flex-row items-center lg:items-start">
